Colaboratory를 통해 생성됨

--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOnvWxne1GYGhHFaiW1FVia",
+      "authorship_tag": "ABX9TyOHaDIRE4o3GMVomo41x1hq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -377,7 +377,7 @@
         "id": "q_ae-pJdFJFo",
         "outputId": "d0a88e05-155a-4330-9e5d-17a6caff0109"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
         "id": "5znF1VhAFquE",
         "outputId": "d2c6f0bd-9df8-4df8-e743-20fcee3e24f0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +434,7 @@
         "id": "H7JCmStYF5-K",
         "outputId": "668120dd-4b78-46a2-87be-ae28894fa17c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
         "id": "47FtJ0k8G5yR",
         "outputId": "52dcbf4c-d9e2-4352-8626-9b3ab2951864"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -491,7 +491,7 @@
         "id": "y5O6jBE4HVm7",
         "outputId": "d437b608-53c5-4623-911a-bcec629a56d9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
         "id": "PrgenkQzH3lO",
         "outputId": "6e308189-f75d-42e4-dc22-1d1d870f1626"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +542,7 @@
         "id": "BopoS_nJH_w_",
         "outputId": "6980f38c-9773-42ea-c6f2-dcb2f59b4c2f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +570,7 @@
         "id": "H_IWtbdeIa9V",
         "outputId": "f9d58947-1cb2-43a8-8745-bb868691814a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +590,127 @@
       "metadata": {
         "id": "sxI0GJY2Izr_"
       },
-      "execution_count": 31,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = input().split()\n",
+        "c = int(a) + int(b)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u1jG7xp3cpjD",
+        "outputId": "ad1053a5-4b31-491c-ea3c-c26a5c264023"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 8\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = input()\n",
+        "a = float(a)\n",
+        "b = input()\n",
+        "b = float(b)\n",
+        "c = a+b\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YKujjEvEcqWa",
+        "outputId": "bad607f2-d202-4a6e-ef62-1fd52bec634e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.1\n",
+            "0.9\n",
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = input()\n",
+        "n = int(a)            #입력된 a를 10진수 값으로 변환해 변수 n에 저장\n",
+        "print('%x'% n)  #n에 저장되어있는 값을 16진수(hexadecimal) 소문자 형태 문자열로 출력"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Aj3_ePH9dRZz",
+        "outputId": "3291793d-22fd-4d9f-8ac3-56606fd8302b"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = input()\n",
+        "n = int(a)            #입력된 a를 10진수 값으로 변환해 변수 n에 저장\n",
+        "print('%X'% n)  #n에 저장되어있는 값을 16진수(hexadecimal) 대문자 형태 문자열로 출력"
+      ],
+      "metadata": {
+        "id": "nZkPFmh-el1N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = input()\n",
+        "n = int(a, 16)      #입력된 a를 16진수로 인식해 변수 n에 저장\n",
+        "print('%o' % n)  #n에 저장되어있는 값을 8진수(octal) 형태 문자열로 출력"
+      ],
+      "metadata": {
+        "id": "o1QcZi1helw_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = ord(input())\n",
+        "print(n)"
+      ],
+      "metadata": {
+        "id": "PinCgiZre17y"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
