Colaboratory를 통해 생성됨

--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHaDIRE4o3GMVomo41x1hq",
+      "authorship_tag": "ABX9TyNL65dt04k26G8hIHFOfGa5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,7 +607,7 @@
         "id": "u1jG7xp3cpjD",
         "outputId": "ad1053a5-4b31-491c-ea3c-c26a5c264023"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +636,7 @@
         "id": "YKujjEvEcqWa",
         "outputId": "bad607f2-d202-4a6e-ef62-1fd52bec634e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "id": "Aj3_ePH9dRZz",
         "outputId": "3291793d-22fd-4d9f-8ac3-56606fd8302b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,6 +709,28 @@
       ],
       "metadata": {
         "id": "PinCgiZre17y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=input()\n",
+        "n=int(n)\n",
+        "print(-n) "
+      ],
+      "metadata": {
+        "id": "XbqgEmUJmG-K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "thk8s-IAmHmP"
       },
       "execution_count": null,
       "outputs": []
