Colaboratory를 통해 생성됨

--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNL65dt04k26G8hIHFOfGa5",
+      "authorship_tag": "ABX9TyMkkmpuMy0omyIRCGOiPwCj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -728,12 +728,212 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "n=input()\n",
+        "n=ord(n)\n",
+        "print(chr(n+1))"
+      ],
       "metadata": {
-        "id": "thk8s-IAmHmP"
+        "id": "thk8s-IAmHmP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa77093f-c9de-42d0-a795-fbf44b8706aa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b=input().split()\n",
+        "a=int(a)\n",
+        "b=int(b)\n",
+        "c = a - b\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h3jWqd8LYbFL",
+        "outputId": "afacbe45-7c2e-49d8-dd8e-a96b07e7a1cd"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123 -123\n",
+            "246\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = map(float, input().split())\n",
+        "m = a * b\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "juacJcnzajDG",
+        "outputId": "9fb63211-14b3-464a-8efd-f17f99893947"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.6 0.5\n",
+            "0.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w, n = input().split()\n",
+        "print(w*int(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bp5RCG0tbPnI",
+        "outputId": "bff9727e-2d7c-4432-aa09-37910b6d3bee"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "love 3\n",
+            "lovelovelove\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = input()\n",
+        "s = input()\n",
+        "print(int(n)*s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "THOBdtbKcuk1",
+        "outputId": "a49a8a5b-b4fe-418e-dbbc-d6aef6b7e22f"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "I love CS\n",
+            "I love CSI love CSI love CS\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b=map(int,input().split())\n",
+        "c = a**b\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J5PUP_yQdMgS",
+        "outputId": "65e27f3d-1ec6-492f-c2be-d4a2841abd21"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 10\n",
+            "1024\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f1, f2=map(float,input().split())\n",
+        "c = f1**f2\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7F7ghlMdp1A",
+        "outputId": "541b6e8f-f7b2-4596-fb49-3af5afdffdde"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.0 2.0\n",
+            "16.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b=map(int,input().split())\n",
+        "print(a//b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XDG1xFBxeeL-",
+        "outputId": "a42e8fb4-2880-4ca2-a29a-f07d82f9f3d2"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 3\n",
+            "3\n"
+          ]
+        }
+      ]
     }
   ]
 }
