Colaboratory를 통해 생성됨

--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkkmpuMy0omyIRCGOiPwCj",
+      "authorship_tag": "ABX9TyPfMD1V1Dsvmz4HyTZ2Z41z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -740,7 +740,7 @@
         },
         "outputId": "fa77093f-c9de-42d0-a795-fbf44b8706aa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
         "id": "h3jWqd8LYbFL",
         "outputId": "afacbe45-7c2e-49d8-dd8e-a96b07e7a1cd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
         "id": "juacJcnzajDG",
         "outputId": "9fb63211-14b3-464a-8efd-f17f99893947"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +819,7 @@
         "id": "bp5RCG0tbPnI",
         "outputId": "bff9727e-2d7c-4432-aa09-37910b6d3bee"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         "id": "THOBdtbKcuk1",
         "outputId": "a49a8a5b-b4fe-418e-dbbc-d6aef6b7e22f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +872,7 @@
         "id": "J5PUP_yQdMgS",
         "outputId": "65e27f3d-1ec6-492f-c2be-d4a2841abd21"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,7 +898,7 @@
         "id": "V7F7ghlMdp1A",
         "outputId": "541b6e8f-f7b2-4596-fb49-3af5afdffdde"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +923,7 @@
         "id": "XDG1xFBxeeL-",
         "outputId": "a42e8fb4-2880-4ca2-a29a-f07d82f9f3d2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,6 +934,76 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = map(int, input().split())\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a//b)\n",
+        "print(a%b)\n",
+        "print(format((a/b),\".2f\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LcUwAqDlg0XB",
+        "outputId": "d62dc219-f911-45c6-f6d9-772d8312eb7f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 3\n",
+            "13\n",
+            "7\n",
+            "30\n",
+            "3\n",
+            "1\n",
+            "3.33\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = map(int,input().split())\n",
+        "d=a+b+c\n",
+        "print(d,\"%.2f\"%(d/3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gAm_jCYthrZi",
+        "outputId": "425f1055-40e3-457b-84de-b8ef8e77776f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3\n",
+            "6 2.00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tGSR7YBljwHM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
