Colaboratory를 통해 생성됨

--- a/코드업_파이선_기초_100문제.ipynb
+++ b/코드업_파이선_기초_100문제.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0PxGNGkR3jnSq050QpDwN",
+      "authorship_tag": "ABX9TyM3iCqJgefx0m1PnC8J0j+X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         },
         "outputId": "75778701-cc5a-409c-993f-5dba248afaef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "id": "_CIZHEWhgDZP",
         "outputId": "24913cb0-fde2-4529-929b-196e4496957a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "id": "UKGH05jAl5Fz",
         "outputId": "d28c1799-00f3-4e62-f293-d15c9d6d0013"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -132,9 +132,49 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "course_list = [\"Python Basic\", \"Java Basic\",\n",
+        "             \"Python Machine Learning\",\n",
+        "             \"Java Web Development\",\n",
+        "             \"Embedded Programming with C++\",\n",
+        "\t\t\t \"\",\n",
+        "             \"Data Science with Python\",\n",
+        "             \"Python Web Development\",\n",
+        "             \"Game Programming with Unity\"]\n",
+        "\n",
+        "\n",
+        "for course in course_list:\n",
+        "  if course == \"\":\n",
+        "    break\n",
+        "  print(course)"
+      ],
+      "metadata": {
+        "id": "8ObzRTHemJim",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2c504cc-13ef-4919-8860-b9b2d15f86c0"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python Basic\n",
+            "Java Basic\n",
+            "Python Machine Learning\n",
+            "Java Web Development\n",
+            "Embedded Programming with C++\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8ObzRTHemJim"
+        "id": "oLkv9QiFll4R"
       },
       "execution_count": null,
       "outputs": []
