Colaboratory를 통해 생성됨

--- a/코드업_파이선_기초_100문제.ipynb
+++ b/코드업_파이선_기초_100문제.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuUFnaOrBZQRa4h4s8mL3R",
+      "authorship_tag": "ABX9TyNmq9Mia8vqGeBDsoFxnYVm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YaJhMw99aCLy",
         "colab": {
@@ -130,7 +130,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a,b=map(int,input().split())\n",
+        "c = bool(int(a))\n",
+        "d = bool(int(b))\n",
+        "print((c and (not d)) or ((not c) and d))"
+      ],
       "metadata": {
         "id": "oLkv9QiFll4R"
       },
