--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7jYrj0IDG6npPZIUIUMUd",
+      "authorship_tag": "ABX9TyOEvWsuGNzQJs70fTxrbLLm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -949,7 +949,25 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "h, w = map(int, input().split())\n",
+        "n = int(input())\n",
+        "grid = [list(0 for _ in range(w)) for _ in range(h)]\n",
+        "\n",
+        "for i in range(n):\n",
+        "    l, d, x, y = map(int, input().split())\n",
+        "    x -= 1\n",
+        "    y -= 1\n",
+        "    if d == 0:\n",
+        "        for j in range(l):\n",
+        "            grid[x][y + j] = 1\n",
+        "    else:\n",
+        "        for j in range(l):\n",
+        "            grid[x + j][y] = 1\n",
+        "\n",
+        "for i in range(h):\n",
+        "    print(*grid[i])"
+      ],
       "metadata": {
         "id": "fbtrj3Nyh7XA"
       },
